# backend/CoreMovieHunterAPI/CoreMovieHunterAPI/Models/MemberLogin.cs
@@ -1,0 +1,13 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Threading.Tasks;
+
+namespace CoreMovieHunterAPI.Models
+{
+    public class MemberLogin
+    {
+        public string Username { get; set; }
+        public string Password { get; set; }
+    }
+}
